--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My School</title>
+   <link rel="stylesheet"href="style.css">
 </head>
 <body>
   <!-- Header Section: Contains the site title -->
   <header id="main-header" class="header">
-    <h1>My School</h1>
+    <h1>BARINGO HIGH SCHOOL</h1>
   </header>
   <!-- Navigation bar -->
   <nav id="navbar" class="navbar">
     <ul>
+        <li><a href="#">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#courses">Courses</a></li>
       <li><a href="#gallery">Gallery</a></li>
