--- a/About.html
+++ b/About.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet"href=style.css>
 </head>
 <body>
-    
+    <nav>
+        <ol>
+            <li><a href="#">About</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/Contact.html">Contact</a></li>
+            <li><a href="/Courses.html">Courses</a></li>  
+        </ol>
+    </nav>
 </body>
 </html>
