--- a/Courses.html
+++ b/Courses.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet"href=style.css>
 </head>
 <body>
-    
+    <nav>
+    <ol>
+           <li><a href="#">Courses</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/About.html">About</a></li>
+            <li><a href="/Contact.html">Contact</a></li>
+        </ol>
+    </nav>
 </body>
 </html>
