add header section

--- a/Contact.html
+++ b/Contact.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet"href=style.css>
 </head>
 <body>
-    <nav>
-        <ol>  
-            <li><a href="#">Contact</a></li>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/About.html">About</a></li>
-            <li><a href="/Courses.html">Courses</a></li>
-             </ol>
-    </nav>
+    <header>
+        <nav>
+            <ol>  
+                <li><a href="#">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/About.html">About</a></li>
+                <li><a href="/Courses.html">Courses</a></li>
+                 </ol>
+        </nav>
+    </header>
 </body>
 </html>
