--- a/Courses.html
+++ b/Courses.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet"href=style.css>
 </head>
 <body>
+    <header>
     <nav>
     <ol>
            <li><a href="#">Courses</a></li>
@@ -15,5 +16,6 @@
             <li><a href="/Contact.html">Contact</a></li>
         </ol>
     </nav>
+   </header>
 </body>
 </html>
