--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 outstanding education and a supportive community. Our institution encourages
 curiosity and excellence in all students.</p>
         <!-- Image of the school building -->
-        <img src="https://via.placeholder.com/300x200" alt="Image of the school
-building" class="school-image" />
+        <img src=school.jpg alt="Image of the school building" class="school-image" />
       </article>
     </section>
     <!-- Courses Section -->
