--- a/About.html
+++ b/About.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <h1>
+            THIS is About the school Webpage
+        </h1>
         <nav>
             <ol>
                 <li><a href="#">About</a></li>
