--- a/Contact.html
+++ b/Contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet"href=style.css>
 </head>
 <body>
+    <h1> This is Contact Us school Webpage</h1>
     <header>
         <nav>
             <ol>  
