--- a/Courses.html
+++ b/Courses.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-    <nav>
+    <h1>
+        This is courses Offered By The School Webpage
+    </h1>
+        <nav>
     <ol>
            <li><a href="#">Courses</a></li>
             <li><a href="/index.html">Home</a></li>
