--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 outstanding education and a supportive community. Our institution encourages
 curiosity and excellence in all students.</p>
         <!-- Image of the school building -->
-        <img src=school.jpg alt="Image of the school building" class="school-image" />
+        <img src="school.jpg alt"class="school-image" />
       </article>
     </section>
     <!-- Courses Section -->
