add gallery webpage

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
   <!-- Header Section: Contains the site title -->
   <header id="main-header" class="header">
-    <h1>BARINGO HIGH SCHOOL</h1>
+    <h1>DURHAM INTERNATIONAL SCHOOL</h1>
   </header>
   <!-- Navigation bar -->
   <nav id="navbar" class="navbar">
     <ul>
         <li><a href="#">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#courses">Courses</a></li>
-      <li><a href="#gallery">Gallery</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="/About.html">About</a></li>
+      <li><a href="/Courses.html">Courses</a></li>
+      <li><a href="/Gallery.html">Gallery</a></li>
+      <li><a href="/Contact.html">Contact</a></li>
     </ul>
   </nav>
   <!-- Main content area -->
@@ -31,7 +31,7 @@
 outstanding education and a supportive community. Our institution encourages
 curiosity and excellence in all students.</p>
         <!-- Image of the school building -->
-        <img src="school.jpg alt"class="school-image" />
+        <img src="school.jpg" alt="Image of the school building" class="school-image" />
       </article>
     </section>
     <!-- Courses Section -->
